<resources>
    <string name="app_name">ChatWithMe</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>"Enter email address!"
    <string name="login">Login</string>

    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="chat_room">Chat room</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="status">Status</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_lenght">Password too short, enter minimum 6 characters!</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_add_room">Add room</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
